Entity validation closes #18
